; ModuleID = '/home/carl/AnghaBench/git/extr_notes-merge.c_notes_merge_abort.c'
source_filename = "/home/carl/AnghaBench/git/extr_notes-merge.c_notes_merge_abort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i8* }
%struct.notes_merge_options = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8
@NOTES_MERGE_WORKTREE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"Removing notes merge worktree at %s/*\0A\00", align 1
@REMOVE_DIR_KEEP_TOPLEVEL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @notes_merge_abort(%struct.notes_merge_options* %0) #0 {
  %2 = alloca %struct.notes_merge_options*, align 8
  %3 = alloca %struct.strbuf, align 8
  %4 = alloca i32, align 4
  store %struct.notes_merge_options* %0, %struct.notes_merge_options** %2, align 8
  %5 = bitcast %struct.strbuf* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %5, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %6 = load i32, i32* @NOTES_MERGE_WORKTREE, align 4
  %7 = call i32 @git_path_buf(%struct.strbuf* %3, i32 %6)
  %8 = load %struct.notes_merge_options*, %struct.notes_merge_options** %2, align 8
  %9 = getelementptr inbounds %struct.notes_merge_options, %struct.notes_merge_options* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp sge i32 %10, 3
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %3, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  %15 = call i32 @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i8* %14)
  br label %16

16:                                               ; preds = %12, %1
  %17 = load i32, i32* @REMOVE_DIR_KEEP_TOPLEVEL, align 4
  %18 = call i32 @remove_dir_recursively(%struct.strbuf* %3, i32 %17)
  store i32 %18, i32* %4, align 4
  %19 = call i32 @strbuf_release(%struct.strbuf* %3)
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @git_path_buf(%struct.strbuf*, i32) #2

declare dso_local i32 @printf(i8*, i8*) #2

declare dso_local i32 @remove_dir_recursively(%struct.strbuf*, i32) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
